<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lifommunity</string>
    <string name="forget_password">Forget password</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="album_description_username">Email</string>
    <string name="album_description_password">Password</string>
    <string name="password_signup">Password (8 DIGITS AT LEAST)</string>
    <string name="settings">Settings</string>
    <string name="userName">Your Name</string>
    <string name="gender">Your Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="location">Location</string>
    <string name="intro">Introduction</string>
    <string name="save">Save</string>
    <string name="location_prompt">Choose a city</string>
    <string name="login_description">Please log in or sign up. \nYou could only browse other posts if you don't log in.</string>
    <string name="signup_description">You can create your account on this page. \nYou will use the email and password to log in.</string>
    <string name="forget_password_description">If you forget the password, please enter your email address.</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="title">Title:</string>
    <string name="title_description">A topic to attract eyeballs of others!</string>
    <string name="content">Content:</string>
    <string name="content_description">Share your story here!</string>
    <string name="add_image">Add an Image</string>
    <string name="camera">Camera</string>
    <string name="my_name">My Name</string>
    <string name="my_email">My Email</string>
    <string name="my_gender">My Gender</string>
    <string name="my_posts">My Posts</string>
    <string name="favorites">Favorites</string>
    <string name="log_out">Log Out</string>
    <string name="write_post">Write Post</string>
    <string name="share">Share</string>
    <string name="send_email">Send Email</string>
    <string name="text_size_bigger">Text Size ++</string>
    <string name="comment">Comment</string>
    <string name="like">like</string>

    <string-array name="locations_array">
        <item>New York</item>
        <item>Chicago</item>
        <item>San Francisco</item>
        <item>Boston</item>
        <item>Orlando</item>
        <item>Los Angeles</item>
    </string-array>
    <string-array name="genders_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">HOME</string>
    <string name="tab_text_2">POST</string>
    <string name="tab_text_3">PROFILE</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
