<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorYellow"
    tools:context="com.markzhengma.android.lifommunity.LoginActivity">
        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_description"/>

            <EditText
                android:id="@+id/email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/album_description_username"
                android:inputType="textEmailAddress"
                android:padding="16dp"/>

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/album_description_password"
                android:inputType="textPassword"
                android:padding="16dp"/>

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:background="@color/colorGreen"
                android:textColor="@color/colorYellow"
                android:padding="16dp"
                android:textAllCaps="true" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/forget_password_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:background="@color/btnBg"
                    android:textColor="@color/colorGreen"
                    android:text="@string/forget_password" />

                <Button
                    android:id="@+id/signup_change_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@color/btnBg"
                    android:textColor="@color/colorGreen"
                    android:text="@string/sign_up" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/signup_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:orientation="vertical"
            android:padding="32dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup_description"/>

                    <EditText
                        android:id="@+id/email_signup_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/album_description_username"
                        android:inputType="textEmailAddress"
                        android:padding="16dp"/>
                    <EditText
                        android:id="@+id/password_signup_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_signup"
                        android:inputType="textPassword"
                        android:padding="16dp"/>
                    <EditText
                        android:id="@+id/username_signup_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/userName"
                        android:inputType="text"
                        android:padding="16dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textSize="18sp"/>
                        <Spinner
                            android:id="@+id/gender_signup_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <EditText
                        android:id="@+id/age_signup_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/age"
                        android:inputType="number"
                        android:padding="16dp"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textSize="18sp"/>
                        <Spinner
                            android:id="@+id/location_signup_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/intro_signup_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/intro"
                        android:inputType="text"
                        android:padding="16dp"/>

                    <Button
                        android:id="@+id/signup_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@color/colorGreen"
                        android:textColor="@color/colorYellow"
                        android:text="@string/sign_up" />
                    <Button
                        android:id="@+id/login_change_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Back"
                        android:background="@color/btnBg"
                        android:textColor="@color/colorGreen"
                        android:padding="16dp"
                        android:textAllCaps="true" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/forget_password_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:orientation="vertical"
            android:padding="32dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password_description"/>

            <EditText
                android:id="@+id/forget_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/album_description_username"
                android:inputType="textEmailAddress"
                android:padding="16dp"/>
            <Button
                android:id="@+id/reset_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_password"/>
            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"/>


        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/home_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/btnBg"
            android:layout_weight="1"
            android:text="@string/home"/>
        <Button
            android:id="@+id/post_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/btnBg"
            android:layout_weight="1"
            android:text="@string/post"/>
        <Button
            android:id="@+id/profile_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorGreen"
            android:textColor="@color/postText"
            android:layout_weight="1"
            android:text="@string/profile"/>
    </LinearLayout>

</LinearLayout>
