<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/section_label"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorYellow"
    tools:context="com.markzhengma.android.lifommunity.ProfileActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">
                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:background="@color/colorGreen"/>
                <TextView
                    android:id="@+id/username_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/my_name"
                    android:textColor="@color/colorGreen"
                    android:layout_margin="4dp"/>
                <TextView
                    android:id="@+id/email_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/my_email"
                    android:textColor="@color/colorGreen"
                    android:layout_margin="4dp"/>
                <TextView
                    android:id="@+id/gender_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/my_gender"
                    android:textColor="@color/colorGreen"
                    android:layout_margin="4dp"/>
                <TextView
                    android:id="@+id/location_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/location"
                    android:textColor="@color/colorGreen"
                    android:layout_margin="4dp"/>
                <TextView
                    android:id="@+id/intro_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/intro"
                    android:textColor="@color/colorGreen"
                    android:layout_margin="4dp"/>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_posts"
                android:textColor="@color/postText"
                android:drawableStart="@drawable/cam_drawable"
                android:paddingHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorGreen"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorites"
                android:drawableStart="@drawable/fav_drawable"
                android:paddingHorizontal="32dp"
                android:textColor="@color/postText"
                android:layout_marginTop="16dp"
                android:background="@color/colorGreen"/>
            <Button
                android:id="@+id/settings_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:drawableStart="@drawable/set_drawable"
                android:paddingHorizontal="32dp"
                android:textColor="@color/postText"
                android:layout_marginTop="16dp"

                android:background="@color/colorGreen" />
            <Button
                android:id="@+id/signout_act_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:drawableStart="@drawable/out_drawable"
                android:paddingHorizontal="32dp"
                android:textColor="@color/postText"
                android:layout_marginTop="16dp"
                android:background="@color/colorGreen"/>
            <CalendarView
                android:id="@+id/simpleCalendarView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
